--- a/force-app/main/default/aura/songHelper/songHelper.cmp
+++ b/force-app/main/default/aura/songHelper/songHelper.cmp
@@ -1,4 +1,5 @@
 <aura:component>
+    <!--aura:handler name="render" value="{!this}" action="{!c.onRender}"/-->
     <aura:method name="start" action="{!c.startPlay}">
         <aura:attribute name="song" type="String" />
     </aura:method>
